--- a/css/style.css
+++ b/css/style.css
@@ -60,17 +60,22 @@ section#home{
 header{
 	position: fixed;
 	width: 100%;
+	height: 60px;
+	background: rgb(201, 221, 245);
+	border-bottom: 2px solid #fff;
+	padding: 0 calc(50% - 496px);
+	z-index: 999;
+	transition-duration: 0.5s;
+}
+header.onTop{
 	height: 90px;
 	background: transparent;
-	border-bottom: 2px solid #fff;
-	padding: 0 calc(50% - 500px);
-	z-index: 999;
 }
 
 section{
 	position: relative;
 	width: 100%;
-	padding: 0 calc(50% - 500px);
+	padding: 0 calc(50% - 496px);
 	text-align: center;
 }
 
@@ -78,20 +83,36 @@ section h1{
 	font-size: 40px;
 	font-weight: bold;
 	margin: 40px;
+	letter-spacing: 8px;
 }
 
 #header-logo img{
-	width: 200px;
+	height: 46px;
+	margin-top: -20px;
+	transition-duration: 0.5s;
+}
+header.onTop #header-logo img{
+	margin-top: 0px;
 }
 
-nav.bg-faded{
+header nav.bg-faded{
 	background: transparent;
 	padding: 15px;
+	height: 60px;
+	transition-duration: 0.5s;
+}
+header.onTop nav.bg-faded{
 	height: 90px;
 }
 
 .navbar-toggleable-md .navbar-nav{
+	transition-duration: 0.5s;
 	float: right;
+	background: rgb(201, 221, 245);
+	padding: 10px;
+}
+header.onTop .navbar-toggleable-md .navbar-nav{
+	margin-top: 15px;
 }
 
 .navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.open, .navbar-light .navbar-nav .open>.nav-link
@@ -105,22 +126,39 @@ nav.bg-faded{
 	color: #fff;
 }
 
-@media (min-width: 992px)
-{
-	.navbar-toggleable-md .navbar-collapse
-	{
-		display: block !important;
-		float: right;
-	}
+.navbar-brand{
+	padding-top: 7px;
+	padding-bottom: 7px;
 }
+.navbar-toggler-right{
+	top: 10px;
+	transition-duration: 0.5s;
+}
+header.onTop .navbar-toggler-right{
+	top: 25px;
+}
+/*.navbar{
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-flex-wrap: nowrap;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+}*/
 
 #home .home-content{
-	position: absolute;
+	position: relative;
 	top: 0;
 	left: 0;
 	right: 0;
 	bottom: 0;
-	padding: 100px calc(50% - 500px) 0;
+	padding: 100px calc(50% - 496px) 0;
 	z-index: 1;
 }
 #home h1{
@@ -163,6 +201,7 @@ nav.bg-faded{
 	font-size: 30px;
 	font-weight: bold;
 	border-radius: 8px;
+	cursor: pointer;
 }
 
 .prob-icon{
@@ -229,6 +268,10 @@ nav.bg-faded{
 	padding: 30px;
 	background-color: rgba(255, 255, 255, 0.5);
 	border-radius: 8px;
+	width: 90%;
+}
+#technology .row .col:first-child .tech-block{
+	margin-left: 10%;
 }
 .tech-icon{
 	position: relative;
@@ -254,4 +297,58 @@ nav.bg-faded{
 .tech-content{
 	font-size: 18px;
 	color: #000;
+}
+
+@media (min-width: 992px)
+{
+	.navbar-toggleable-md .navbar-collapse
+	{
+		display: block !important;
+		float: right;
+	}
+	#header-logo img{
+		margin-top: 0px;
+	}
+	header.onTop .navbar-toggleable-md .navbar-nav{
+		margin-top: 0px;
+		background-color: transparent;
+	}
+	.navbar-toggleable-md .navbar-nav{
+		background-color: transparent;
+	}
+	#technology .row .col .tech-block{
+		width: 100%;
+	}
+	#technology .row .col:first-child .tech-block{
+		margin-left: 0;
+	}
+}
+@media (max-width: 992px)
+{
+	section h1{
+		letter-spacing: 0px;
+	}
+	section#home{
+		height: auto;
+	}
+}
+@media (max-width: 576px)
+{
+	#technology .row .col .tech-block{
+		width: 90%;
+		margin-left: 5%;
+		margin-right: 5%;
+	}
+	#technology .row .col:first-child .tech-block{
+		margin-left: 5%;
+	}
+	#home .home-icon{
+		width: 200px;
+		height: 200px;
+		background-size: 200px;
+	}
+	#home .home-icon:before{
+		width: 200px;
+		height: 200px;
+	}
 }
