--- a/css/style.css
+++ b/css/style.css
@@ -61,11 +61,11 @@ header{
 	position: fixed;
 	width: 100%;
 	height: 60px;
-	background: rgb(201, 221, 245);
+	background: rgb(160, 170, 240);
 	border-bottom: 2px solid #fff;
 	padding: 0 calc(50% - 496px);
 	z-index: 999;
-	transition-duration: 0.5s;
+	transition-duration: 0.3s;
 }
 header.onTop{
 	height: 90px;
@@ -89,7 +89,7 @@ section h1{
 #header-logo img{
 	height: 46px;
 	margin-top: -20px;
-	transition-duration: 0.5s;
+	transition-duration: 0.3s;
 }
 header.onTop #header-logo img{
 	margin-top: 0px;
@@ -99,14 +99,14 @@ header nav.bg-faded{
 	background: transparent;
 	padding: 15px;
 	height: 60px;
-	transition-duration: 0.5s;
+	transition-duration: 0.3s;
 }
 header.onTop nav.bg-faded{
 	height: 90px;
 }
 
 .navbar-toggleable-md .navbar-nav{
-	transition-duration: 0.5s;
+	transition-duration: 0.3s;
 	float: right;
 	background: rgb(201, 221, 245);
 	padding: 10px;
@@ -118,9 +118,12 @@ header.onTop .navbar-toggleable-md .navbar-nav{
 .navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.open, .navbar-light .navbar-nav .open>.nav-link
 {
 	color: rgb(17, 23, 133);
+	transition-duration: 0.3s;
 }
 .navbar-light .navbar-nav .active>.nav-link{
 	text-decoration: underline;
+	color: rgb(226, 214, 23);
+	font-weight: bold;
 }
 .navbar-light .navbar-nav .nav-link:hover{
 	color: #fff;
@@ -132,25 +135,15 @@ header.onTop .navbar-toggleable-md .navbar-nav{
 }
 .navbar-toggler-right{
 	top: 10px;
-	transition-duration: 0.5s;
+	transition-duration: 0.3s;
+}
+.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover
+{
+	color: rgb(17, 23, 133);
 }
 header.onTop .navbar-toggler-right{
 	top: 25px;
 }
-/*.navbar{
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: row;
-    -ms-flex-direction: row;
-    flex-direction: row;
-    -webkit-flex-wrap: nowrap;
-    -ms-flex-wrap: nowrap;
-    flex-wrap: nowrap;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
-}*/
 
 #home .home-content{
 	position: relative;
@@ -203,6 +196,9 @@ header.onTop .navbar-toggler-right{
 	border-radius: 8px;
 	cursor: pointer;
 }
+#home .home-btn-div:hover{
+	color: rgb(226, 214, 23);
+}
 
 .prob-icon{
 	position: relative;
@@ -224,6 +220,9 @@ header.onTop .navbar-toggler-right{
 	left: 14px;
 	border: 1px solid rgb(17, 23, 133);
 	border-radius: 50%;
+}
+.prob-icon:hover:before{
+	box-shadow: 0 0 10px rgba(17, 23, 133, 0.5);
 }
 .icon-privacy{
 	background-image: url(../images/icons/problem-privacy.png);
@@ -283,6 +282,10 @@ header.onTop .navbar-toggler-right{
 	background-position: center;
 	background-size: 60%;
 	background-color: rgb(17, 23, 133);
+	transition-duration: 0.1s;
+}
+.tech-icon:hover{
+	background-color: rgb(226, 214, 23);
 }
 .tech-icon.icon-gpu{
 	background-image: url(../images/icons/tech-gpu.png);
