--- a/css/style.css
+++ b/css/style.css
@@ -355,3 +355,25 @@ header.onTop .navbar-toggler-right{
 		height: 200px;
 	}
 }
+
+@media screen and (max-width: 48em) {
+  .main-example {
+    width: 100%;
+  }
+  .main-example .countdown-container {
+    height: 100px;
+  }
+  .main-example .time {
+      height: 70px;
+      width: 48px;
+  }
+  .main-example .count {
+    font-size: 1.5em;
+    line-height: 70px;
+  }
+  .main-example .label {
+    font-size: 0.8em;
+    top: 72px;
+  }
+}
+/* Count Down end */
