--- a/css/style.css
+++ b/css/style.css
@@ -382,6 +382,35 @@ header.onTop .navbar-toggler-right{
 	width: 100%;
 	max-width: 660px;
 }
+.ecosystem-wireframe-div{
+	border: 3px solid rgb(41, 43, 114);
+	padding-top: 30px;
+	padding-bottom: 30px;
+	margin-bottom: 30px;
+}
+.ecosystem-table{
+	border-right: 3px solid rgb(41, 43, 114);
+	border-bottom: 3px solid rgb(41, 43, 114);
+	width: 90%;
+	margin: 0 auto 10px;
+}
+#ecosystem table.ecosystem-table td{
+	text-align: center;
+	height: 50px;
+	border-top: 3px solid rgb(41, 43, 114);
+	border-left: 3px solid rgb(41, 43, 114);
+	font-size: 20px;
+	line-height: 22px;
+	color: #000;
+}
+#ecosystem .col-sm-3{
+	text-align: center;
+}
+#ecosystem .col-sm-3 p{
+	margin-bottom: 0;
+	font-size: 20px;
+	line-height: 22px;
+}
 #pie-container{
 	height: 50vw;
 	width: 100%;
@@ -554,3 +583,38 @@ header.onTop .navbar-toggler-right{
   }
 }
 /* Count Down end */
+
+#work-in-progress {
+	position: fixed;
+	z-index: 200000;
+	background-color: #FFFFFF;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+}
+@keyframes loading {
+  from {
+    transform: rotateZ(0);
+  }
+
+  to {
+    transform: rotateZ(3600deg);
+  }
+}
+.work-spinner {
+	width: 100px;
+	height: 100px;
+	background-image: url(../images/logo2.png);
+	background-repeat: no-repeat;
+	background-size: 70%;
+	background-position: center;
+	margin: calc(50vh - 50px) auto;
+	box-shadow: 0 0 0 5px rgb(85, 100, 180);
+	border-radius: 50%;
+	animation-duration: 50s;
+	animation-name: loading;
+	animation-iteration-count: infinite;
+	-webkit-animation-timing-function: linear; /* Safari 4.0 - 8.0 */
+	animation-timing-function: linear;
+}
